deployment.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-demo
  labels:
    app: istio-demo
spec:
  strategy:
    canary:
      analysis:
        templates:
        - templateName: success-rate
        startingStep: 2
        args:
        - name: service-name
          value: istio-demo-canary.default.svc.cluster.local
      steps:
      - setWeight: 20
      - pause:
          duration: "1m"
      - setWeight: 50
      - pause:
          duration: "2m"
      canaryService: istio-demo-canary
      stableService: istio-demo
      trafficRouting:
        istio:
          virtualService:
            name: istio-vs
            routes:
            - primary # At least one route is required
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: istio-demo
      version: blue
  template:
    metadata:
      labels:
        app: istio-demo
        version: blue
    spec:
      containers:
      - name: istio-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "140m"
---
apiVersion: v1
kind: Service
metadata:
  name: istio-demo
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: istio-demo
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: istio-demo-canary
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: istio-demo
  type: ClusterIP
